fix padding on small buttons

--- a/desktop/src/main/java/haveno/desktop/haveno.css
+++ b/desktop/src/main/java/haveno/desktop/haveno.css
@@ -168,7 +168,11 @@
     -fx-text-fill: -bs-background-color;
 }
 
-.compact-button, .table-cell .jfx-button, .action-button.compact-button {
+.action-button.compact-button {
+    -fx-padding: 0 15 0 15;
+}
+
+.compact-button, .table-cell .jfx-button {
     -fx-padding: 0 7 0 7;
 }
 
